# fiap_datathon

./: .gitignore  README.md
containers/: 01-build-news-recomender.sh  news-recomender.dockerfile
fiap_datathon_app/: pyproject.toml
fiap_datathon_app/sh/: 00-install-api.sh  01-run-api.sh  20-dataprep.sh  21-add-massive-news.sh  22-search-massive-news.sh  90-test-api.sh  add_news_test.py  inference_test.py
fiap_datathon_app/src/fiap_datathon_app/: api.py  data_prep.py  inference_test.py  massive_first_news_add.py  massive_news_add.py
fiap_datathon_app/src/fiap_datathon_app/data/: globo.py
fiap_datathon_app/src/fiap_datathon_app/ml/: recommendation.py
k8s/: 01-deploy-news-recommender.sh  news-recommender-dpl.yaml
minikube/: 01-enable-nvidiagpu.sh  02-minikube-start-gpu.sh
sh/: 00-install-api.sh  01-run-api.sh  20-dataprep.sh  21-add-massive-news.sh  22-search-massive-news.sh  23-add-massive-first-news.sh  90-docker-qdrant.sh  inference_test.py
