[build-system]
requires = ["setuptools>=61.0"]  # Use setuptools for building
build-backend = "setuptools.build_meta"

[project]
name = "fiap-datathon-app"
version = "0.1.0"
description = "A data science project for the FIAP Datathon."
authors = [{name = "Ivan Falcão", email = "ivanpfalcao@outlool.com"}] #Replace
readme = "README.md"
requires-python = ">=3.10"  # Specify your minimum Python version
dependencies = [
"duckdb==1.1.3"
,"nltk==3.9.1"
,"numpy==1.26.4"
,"nvidia-cublas-cu12==12.4.5.8"
,"nvidia-cuda-cupti-cu12==12.4.127"
,"nvidia-cuda-nvrtc-cu12==12.4.127"
,"nvidia-cuda-runtime-cu12==12.4.127"
,"nvidia-cudnn-cu12==9.1.0.70"
,"nvidia-cufft-cu12==11.2.1.3"
,"nvidia-curand-cu12==10.3.5.147"
,"nvidia-cusolver-cu12==11.6.1.9"
,"nvidia-cusparse-cu12==12.3.1.170"
,"nvidia-nccl-cu12==2.21.5"
,"nvidia-nvjitlink-cu12==12.4.127"
,"nvidia-nvtx-cu12==12.4.127"
,"torch==2.5.1"
,"fastapi"
,"uvicorn"
,"qdrant_client"
,"transformers"
,"pandas"
,"pyarrow"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=fiap_datathon_app --cov-report term-missing --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true